# website

./: .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  build_debug.sh  compile_commands.json  debug.sh  fly.toml  justfile
assets/styles/: base.css
blogs/first/: en.md  metadata.ini
mew/: CMakeLists.txt
mew/include/mew/: alloc.h  html.h  ini.h  log.h  str.h  thrdpool.h  utils.h
mew/include/mew/containers/: hashmap.h  rbtree.h  vector.h
mew/include/mew/http/: common.h  fs.h  handler.h  headermap.h  http.h  request.h  response.h  router.h  server.h
mew/include/mew/os/: fs.h  socket.h
mew/src/: all.c  alloc.c  html.c  ini.c  log.c  str.c  thrdpool.c  utils.c
mew/src/containers/: hashmap.c  rbtree.c  vector.c
mew/src/http/: common.c  fs.c  headermap.c  request.c  response.c  router.c  server.c
mew/src/os/: fs_posix.c  socket_posix.c  socket_windows.c
mew/test/: mewtest.h  router.c
src/: alloc.c  alloc.h  blogs.c  headermap.h  html.c  html.h  http.c  http.h  ini.c  ini.h  log.c  log.h  main.c  rbtree.c  rbtree.h  server.c  str.c  str.h  thrdpool.c  thrdpool.h  utils.c  utils.h  web.c  web.h
src/components/: contact_info.c  footer.h  gamelist.c  gamelist.h  linkitem.h  project.c  projectlist.c  technology.c  technology.h
src/containers/: hashmap.c  hashmap.h
src/http/: common.c  common.h  fs.c  fs.h  handler.h  headermap.c  headermap.h  http.h  request.c  request.h  response.c  response.h  router.c  router.h  server.c  server.h
src/pages/: base.c  base.h  blog.c  blogs.c  index.c  index.h  music.c  music.h
website/: CMakeLists.txt
website/src/: blogs.c  blogs.h  main.c  web.c  web.h
website/src/components/: about.c  about.h  contact_info.c  contact_info.h  footer.c  game.c  game.h  gamelist.c  linkitem.c  navmenu.c  navmenu.h  project.h  projectlist.c  projectlist.h
website/src/pages/: blog.h  blogs.h  index.h
